--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,14 @@ readme = "README.md"
 requires-python = ">=3.9"
 dependencies = []
 
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
 [dependency-groups]
 dev = [
     "python-lsp-ruff>=2.2.2",
 ]
+
+[project.scripts]
+mlstatus = "mlstatus.mlstatus:main"
